# Agrotopia

./: README.md  agents.py  agrotopia.py  areas.geojson  images  model.py  server.py
agrotopia/: LICENCE  agents.py  agrotopia.py  load_files.py  setup.cfg
data/: AgroDB.Agricultor_Table.json  AgroDB.Crop_Table.json  AgroDB.Table_Offer.json
data/ENG/20mas/: df_influencia_recalculada_simple.csv
data/ENG/20mas/20menos/: df_influencia_recalculada_simple.csv
data/ENG/20mas/normal/: df_influencia_recalculada_simple.csv
data/ENG/20minus/: df_influencia_evolucion.csv
data/ENG_DB/: AgroDB_Eng.Crop_Table.json  AgroDB_Eng.Farmer_Table.json  AgroDB_Eng.Offer_Table.json
data/SP/20mas/: df_influencia_evolucion.csv
data/SP/normal/: df_influencia_evolucion.csv
data/SP_DB/: AgroDB.Agricultor_Table.json
resources/: agentes.geojson
