[metadata]
name = agrotopia
version = 0.0.1
author = Pablo Velasquez Cisterna
author_email = pvelasquezc@udec.cl
description = For detect conflict in Agricultural Basin with ABM
long_description = file :README.md
long_description_content_type = text/markdown
url=https://github.com/Pablov81/Agrotopia/
clasifiers= 
    Programing Language ::Python :: 3

[options]
packages = find:
python_requires = >=3.7
include_package_data = True